fix layout problem for side content in tc-script

--- a/src/app/feat-design/testcasescript/tc-script/settings/settings.component.scss
+++ b/src/app/feat-design/testcasescript/tc-script/settings/settings.component.scss
@@ -1,9 +1,19 @@
-.sticky-offset { top: 100px; }
-.btn-block-option { color: #495057; }
-.btn-block-option:hover { color: #495057; }
+.sticky-offset {
+  top: 100px;
+}
+.btn-block-option {
+  color: #495057;
+}
+.btn-block-option:hover {
+  color: #495057;
+}
 .block-header {
-        padding: 0.25rem 0.80rem;
+  padding: 0.25rem 0.8rem;
 }
 .fa.fa-ellipsis-v {
-     font-size: 0.8em;
+  font-size: 0.8em;
+}
+
+.custom-z {
+  z-index: 999 !important;
 }
